--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kalite-systemd-helper (0.0.1-1) unstable; urgency=medium
+eos-kalite-systemd-helper (0.0.1-1) unstable; urgency=medium
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
